--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+  background-color: black;
+}
+
 .backdrop{
   background: url("Rainbow Brick CROP.jpg") center;
   background-size: contain;
@@ -7,9 +11,9 @@
 
 .text{
   color: black;
-  border: 4px solid;
-  background: rgb(244, 220, 211);
+  border: 40px solid;
+  background: #b4c2c0;
   mix-blend-mode: screen;
-  font: bolder 12vw 'Alfa Slab One';
+  font: bolder 12vw courier;
   text-align: center;
 }
